# libnbcr

./: Makefile  Makefile.in  README  config.h  config.status  configure  configure.ac
autom4te.cache/: output.0  requests  traces.0  traces.1
examples/: Makefile  Makefile.am  Makefile.in  nbcrc  nbcrc.c  nbcrs  nbcrs.c
examples/.deps/: nbcrc-nbcrc.Po  nbcrc.Po  nbcrs-nbcrs.Po
include/: nbcr.h  nbcr_config.h  nbcr_util.h
src/: Makefile  Makefile.in  nbcr.c  nbcr_st.c  nbcr_util.c
