#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.63])
AC_INIT([nbcr], [0.0.1], [kent@matsulab.is.titech.ac.jp])
AM_INIT_AUTOMAKE(nbcr, 0.0.1)

AC_CONFIG_SRCDIR([examples/nbcrc.c])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile
                 examples/Makefile
		 src/Makefile])
AC_OUTPUT
